# rust-bare

./: .gitignore  Cargo.toml  global_config.json
.cargo/: config.toml
public/uv/: uv.config.js  uv.sw.js
src/: main.rs
src/crates/: config.rs  mod.rs
src/crates/pr_utils/headers/: join.rs  mod.rs  split.rs
src/crates/se_app/: configure.rs  mod.rs  server.rs
src/crates/se_app/routes/: mod.rs
src/crates/se_app/routes/bare/: root.rs
src/crates/se_app/routes/bare/v2/: mod.rs  root.rs
