[package]
name = "despiritualization"
version = "0.0.0"
edition = "2021"
authors = [
    "desp",
    "flaxeneel2"
]

[dependencies]
tokio = { version = "1", features = [ "full" ] }
env_logger = "0.10"
actix-web = "4"
actix-files = "0.6.2"
futures = "0.3"
psutil = "3"
awc = { version = "3", features = [ "rustls" ] }
once_cell = "1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
url = { version = "2", features = [ "serde" ] }
